--- a/client/index.html
+++ b/client/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Socket client</title>
-    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js" integrity="sha384-2huaZvOR9iDzHqslqwpR87isEmrfxqyWOF7hr7BY6KG0+hVKLoEXMPUJw3ynWuhO" crossorigin="anonymous"></script>
-    <script src="./index.js"></script>
 </head>
-<body>
-    <h1>Web socket</h1>
+<h1>Web socket</h1>
+<div id="messages"></div>
+<input type="text" id="messageRep">
+<button onclick="sendMessage()">Send message</button>
+
 </body>
+<script src="https://cdn.socket.io/4.7.5/socket.io.min.js" integrity="sha384-2huaZvOR9iDzHqslqwpR87isEmrfxqyWOF7hr7BY6KG0+hVKLoEXMPUJw3ynWuhO" crossorigin="anonymous"></script>
+<script src="./index.js"></script>
 </html>
